# ManipulationTasks

./: .gitignore  CMakeLists.txt  make.sh
python/: green_ring.py  setup.sh
python/data_logger/: kinect_streamer.py  realtime_plotter.py
python/vision/: kinect_bottleID.py  kinect_eg.py  main.py  requirements.txt  testing.py
screwCapTask/: CMakeLists.txt  kuka_iiwa.urdf  screwCapTask_controller.cpp  world.urdf
src/data_logger/: data_logger.py  kinect_streamer.py
src/demo_project/: CMakeLists.sublime-workspace  CMakeLists.txt  DemoProject.cpp  DemoProject.h  kuka_iiwa.urdf  puma.urdf  world.urdf
src/filters/: ButterworthFilter.h
src/force_sensor/: CMakeLists.txt  optoforce6DRedisDriver.cpp
src/kuka_iiwa/: .gitignore  CMakeLists.txt  KukaIIWA.h  KukaIIWARedisDriver.cpp  KukaIIWARedisDriver.h  README.md  RedisDriver.cpp  RedisDriver.h  kuka_hold_pos_main.cpp  kuka_iiwa.urdf  tool.xml  world.urdf
src/kuka_iiwa/filters/: ButterworthFilter.h
src/optitrack/: CMakeLists.txt  OptiTrack.h  OptiTrackClient.cpp  OptiTrackClient.h  optitrack_main.cpp
src/optoforce/: CMakeLists.txt  OptoForce.h  OptoForceCalibration.cpp  OptoForceRedisDriver.cpp  Optoforce.h  OptoforceCalibration.cpp  OptoforceRedisDriver.cpp  OptoforceRedisDriver.h
src/optoforce/filters/: ButterworthFilter.h
src/redis/: RedisClient.cpp  RedisClient.h
src/schunk_gripper/: CMakeLists.txt  README.md  SchunkGripper.h  SchunkGripperRedisDriver.cpp  SchunkGripperRedisDriver.h
src/simulation/: CMakeLists.txt  Simulator.cpp  Simulator.h
src/vision/: .gitignore  kinect_color.py  main.py  pylibfree.py  requirements.txt
src/visualization/: CMakeLists.txt  visualizer_main.cpp
src/visualization/uiforce/: UIForceWidget.cpp  UIForceWidget.h
